--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.1",
     "tailwindcss": "^4.1.7"
   }
 }
